<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/title_add_conversation"
        style="@style/h3"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_conversation"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:startIconDrawable="@drawable/ic_search"
        android:layout_below="@id/title_add_conversation"
        android:layout_marginTop="@dimen/margin_form">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/search"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_view_select_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_users"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkgrey"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/txt_input_layout_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_friends_conversation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_view_select_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:weightSum="2"
        android:layout_alignParentBottom="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_conversation_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1dp"
            android:textColor="@color/primary_color"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_conversation_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"/>
    </LinearLayout>
</RelativeLayout>
</layout>