<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:background="@drawable/bg_round">

    <TextView
        android:id="@+id/title_popup_add_conversation"
        style="@style/h3"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_conversation"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:startIconDrawable="@drawable/ic_search"
        android:layout_below="@id/title_popup_add_conversation"
        android:layout_marginTop="@dimen/margin_form">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/search"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_friends_conversation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_layout_search"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_conversation"
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_conversation"
        android:layout_below="@id/rv_friends_conversation"/>

</RelativeLayout>
</layout>