<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".authentication.RegistrationActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/upsaclay"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_logo_upsaclay"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop_horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"/>

    <TextView
        style="@style/h3"
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop_horizontal"/>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_name_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_firstname_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_form"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name_registration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_firstname_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/input_layout_mail_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_form"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_mail_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_form"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout_mail_registration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_birthday_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_form"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password_registration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_birthday_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_gender_registration"
        android:background="@drawable/bg_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_form"
        android:layout_marginEnd="5dp"
        android:entries="@array/gender"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintEnd_toStartOf="@id/spinner_status_registration"
        app:layout_constraintTop_toBottomOf="@id/input_layout_birthday_registration"/>

    <Spinner
        android:id="@+id/spinner_status_registration"
        android:background="@drawable/bg_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_form"
        android:layout_marginStart="5dp"
        android:entries="@array/status"
        app:layout_constraintStart_toEndOf="@id/spinner_gender_registration"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout_birthday_registration"/>-->

    <TextView
        android:id="@+id/txt_view_register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_form"
        tools:text="Nom d'utilisateur ou mot de passe incorrect"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password_registration"
        />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_form"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/txt_view_register_error"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>